[package]
name = "benchpmc"
version = "1.0.0"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]

license = "BSD-3-Clause"
readme = "README.md"
keywords = ["pmc", "freebsd", "benchmark"]
repository = "https://github.com/domodwyer/benchpmc"
homepage = "https://github.com/domodwyer/benchpmc"
description = """
Black box benchmark runner for CPU micro-architecture events using Performance Monitor Counters.
"""
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.*"
separator = "0.4.*"
nix = "0.21.*"
ansi_term = "0.12.*"

[target.'cfg(target_os = "freebsd")'.dependencies]
pmc-rs = "0.1.1"